--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="A weather application"
-      content="A weather application that helps you find what you need about any city"
+      name="SolarWeather"
+      content="SolarWeather helps you find the weather daya you need for any city in the world!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Weather App</title>
+    <title>SolarWeather</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
